force-app/main/default/objects/DepositApplication__c/DepositApplication__c.object-meta.xml
<CustomObject>
    <label>Deposit Application</label>
    <nameField>
        <displayFormat>DEPA-{00000}</displayFormat>
        <label>Deposit Application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>