force-app/main/default/objects/DepositApplication__c/fields/Allow_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Marketing__c</fullName>
    <label>Allow Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>