force-app/main/default/objects/DepositApplication__c/fields/BankingUserId__c.field-meta.xml
<CustomField>
    <fullName>BankingUserId__c</fullName>
    <label>BankingUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>