force-app/main/default/objects/DepositApplication__c/fields/Country_Of_Tax_Residency__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Tax_Residency__c</fullName>
    <label>Country Of Tax Residency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>