force-app/main/default/objects/DepositApplication__c/fields/Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Email</label>
    <type>Checkbox</type>
</CustomField>