force-app/main/default/objects/DepositApplication__c/fields/Marketing_Post__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Post</label>
    <type>Checkbox</type>
</CustomField>