force-app/main/default/objects/DepositApplication__c/fields/Marketing_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Telephone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Telephone</label>
    <type>Checkbox</type>
</CustomField>