force-app/main/default/objects/DepositApplication__c/fields/Marketing_Text_SMS__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Text_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Text SMS</label>
    <type>Checkbox</type>
</CustomField>