force-app/main/default/objects/DepositApplication__c/fields/Telephone_Banking_Word__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Banking_Word__c</fullName>
    <label>Telephone Banking Word</label>
    <length>255</length>
    <type>Text</type>
</CustomField>