force-app/main/default/objects/DepositApplication__c/fields/Yearly_Income__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Income__c</fullName>
    <label>Yearly Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>£0 to £39,999</fullName>
            </value>
            <value>
                <fullName>£40,000 to £79,999</fullName>
            </value>
            <value>
                <fullName>£80,000 to £121,999</fullName>
            </value>
            <value>
                <fullName>Over £120,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>