force-app/main/default/objects/DepositApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Address_Line_1__c</columns>
    <columns>City__c</columns>
    <columns>Deposit_Amount__c</columns>
    <columns>Yearly_Income__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>